# danyad

./: README.md  pyproject.toml
src/configs/: config_data.yaml
src/notebooks/: 0_EDA.ipynb  1_train_model.ipynb
src/scripts/: data_handler.py  script_utils.py
