[tool.poetry]
name = "danyad"
version = "0.1.0"
description = ""
authors = ["Denis Sitdikov <denis.sitd@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
