[tool.poetry]
name = "danyad"
version = "0.1.0"
description = ""
authors = ["Denis Sitdikov <denis.sitd@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
jupyterlab = "^4.1.8"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
xgboost = "^2.0.3"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
